<resources>
    <string name="app_name">unt_front_demo</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="courses">Courses</string>
    <string name="home">Home</string>
    <string name="login">LOGIN</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="or_connect_with">OR CONNECT WITH</string>
    <string name="sign_up">SIGN UP</string>
    <string name="have_an_account">Have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="choose_a_course">Choose a course</string>
    <string name="about_course">About Course</string>
    <string name="useful_links">Useful links</string>
    <string name="exam_tickets">Exam tickets</string>
    <string name="random_exam_ticket">Random exam ticket</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about_developers">About Developers</string>
    <string name="team_name_snickersdevops">Team Name : SnickersDevOps</string>
    <string name="team_members">Team members :</string>
    <string name="adilet_kaskarauov_temirlan_akishev_maksat_maratov_timur_doirashev">Adilet Kaskarauov, Temirlan Akishev, Maksat Maratov, Timur Doirashev</string>
    <string name="link_to_the_project_code">Link to the project code :</string>


</resources>