<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemHome"
        android:icon="@drawable/ic_home"
        
        android:title="@string/home"

        android:orderInCategory="1" />
        <item
        android:id="@+id/itemCourses"
        android:icon="@drawable/ic_courses"
        android:title="@string/courses"
        android:orderInCategory="2" />
    <item
        android:id="@+id/itemStatistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"
        android:orderInCategory="3" />
    <item
        android:id="@+id/itemProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:orderInCategory="4" />
</menu>